--- a/games/moonlight-embedded-devel/Makefile
+++ b/games/moonlight-embedded-devel/Makefile
@@ -1,6 +1,5 @@
 PORTNAME=	moonlight-embedded-devel
-DISTVERSION=	2.7.5
-PORTREVISION=	1
+DISTVERSION=	2.7.6
 CATEGORIES=	games
 MASTER_SITES=	https://github.com/armin-25689/moonlight-embedded/releases/download/v${DISTVERSION}/
 
@@ -16,6 +15,7 @@ BUILD_DEPENDS=	${LOCALBASE}/include/linux/input.h:devel/evdev-proto \
 LIB_DEPENDS=	libavahi-client.so:net/avahi-app \
 		libavcodec.so:multimedia/ffmpeg \
 		libcurl.so:ftp/curl \
+		libdrm.so:graphics/libdrm \
 		libepoll-shim.so:devel/libepoll-shim \
 		libevdev.so:devel/libevdev \
 		libexpat.so:textproc/expat2 \
@@ -30,7 +30,7 @@ USES=		cmake gl localbase:ldflags perl5 pkgconfig sdl ssl tar:xz xorg
 USE_GL=		egl gbm glesv2
 USE_LDCONFIG=	yes
 USE_PERL5=	build
-USE_SDL=	sdl2
+USE_SDL=	sdl3
 USE_XORG=	x11
 
 CMAKE_ARGS=	-DCMAKE_INSTALL_SYSCONFDIR=${PREFIX}/etc/moonlight
@@ -47,19 +47,24 @@ PLIST_FILES=	bin/moonlight \
 		share/man/man1/moonlight.1.gz \
 		share/moonlight/gamecontrollerdb.txt
 
-OPTIONS_DEFAULT=	OSS
+OPTIONS_DEFAULT=	LIBYUV OSS
 OPTIONS_GROUP=		OTHERS
 OPTIONS_GROUP_OTHERS=	CEC
-OPTIONS_SINGLE=		SOUND
+OPTIONS_SINGLE=		CONVERT SOUND
+OPTIONS_SINGLE_CONVERT=	LIBSWSCALE LIBYUV
 OPTIONS_SINGLE_SOUND=	OSS PULSE
 
-CEC_DESC=	Enable HDMI-CEC(TV controller) feature by using libcec.so
-OSS_DESC=	Open Sound System support for embedded(not SDL) platform
-PULSE_DESC=	PulseAudio sound server support for embedded(not SDL) platform
+CEC_DESC=		Enable HDMI-CEC(TV controller) feature by using libcec.so
+LIBSWSCALE_DESC=	Convert video frame format with libswscale.h
+LIBYUV_DESC=		Convert video frame format with libyuv.h
+OSS_DESC=		Open Sound System support for embedded(not SDL) platform
+PULSE_DESC=		PulseAudio sound server support for embedded(not SDL) platform
 
 CEC_LIB_DEPENDS=	libcec.so:multimedia/libcec \
 			libp8-platform.so:devel/p8-platform
 CEC_CMAKE_BOOL=		ENABLE_CEC
+LIBSWSCALE_CMAKE_ON=	-DENABLE_YUV:BOOL=false
+LIBYUV_LIB_DEPENDS=	libyuv.so:graphics/libyuv
 OSS_CMAKE_ON=		-DENABLE_PULSE:BOOL=false
 PULSE_LIB_DEPENDS=	libpulse.so:audio/pulseaudio
 PULSE_CMAKE_BOOL=	ENABLE_PULSE
