--- a/net-mgmt/victoria-logs/Makefile
+++ b/net-mgmt/victoria-logs/Makefile
@@ -1,6 +1,7 @@
 PORTNAME=	victoria-logs
 PORTVERSION=	1.45.0
 DISTVERSIONPREFIX=	v
+PORTREVISION=	1
 CATEGORIES=	net-mgmt
 
 MAINTAINER=	samm@FreeBSD.org
@@ -30,14 +31,17 @@ MAKE_ENV=	BUILDINFO_TAG=tags-v${PORTVERSION}-victorialogs \
 ALL_TARGET=	${PORTNAME}-pure vlogscli-pure vmalert-pure
 
 SUB_LIST+=	VICTORIA_DATA=${VICTORIA_DATA} \
+		VICTORIA_LOGS=${VICTORIA_LOGS} \
 		VICTORIA_USER=${USERS}
 
 USERS=		victoria-logs
 GROUPS=		victoria-logs
 VICTORIA_DATA?=	/var/db/victoria-logs
+VICTORIA_LOGS?=	/var/log/victoria_logs
 
 PLIST_SUB+=	VICTORIA_DATA=${VICTORIA_DATA} \
 		VICTORIA_GROUP=${GROUPS} \
+		VICTORIA_LOGS=${VICTORIA_LOGS} \
 		VICTORIA_USER=${USERS}
 
 OPTIONS_DEFINE=	DOCS
@@ -48,7 +52,7 @@ do-install:
 		${STAGEDIR}${PREFIX}/bin/${PORTNAME}
 	${INSTALL_PROGRAM} ${INSTALL_WRKSRC}/bin/vlogscli-pure \
 		${STAGEDIR}${PREFIX}/bin/vlogscli
-	@${MKDIR} ${STAGEDIR}${VICTORIA_DATA}
+	@${MKDIR} ${STAGEDIR}${VICTORIA_DATA} ${STAGEDIR}${VICTORIA_LOGS}
 
 do-install-DOCS-on:
 	@${MKDIR} ${STAGEDIR}${DOCSDIR}
