--- a/graphics/drawio/Makefile
+++ b/graphics/drawio/Makefile
@@ -1,18 +1,17 @@
 PORTNAME=	drawio
-PORTVERSION=	28.0.6
-PORTREVISION=	15
+PORTVERSION=	29.3.6
 DISTVERSIONPREFIX=	x86_64-
 CATEGORIES=	graphics
 MASTER_SITES=	https://github.com/jgraph/drawio-desktop/releases/download/v${PORTVERSION}/
 EXTRACT_SUFX=	.rpm
 
-MAINTAINER=	x636808@gmail.com
+MAINTAINER=	arrowd@FreeBSD.org
 COMMENT=	Diagramming and whiteboarding desktop app
 WWW=		https://drawio.com/
 
 LICENSE=	APACHE20
 
-USES=		desktop-file-utils electronfix:37 shared-mime-info
+USES=		desktop-file-utils electronfix:38 shared-mime-info
 
 NO_BUILD=	yes
 SUB_FILES=	drawio
