graphics/p5-Image-ExifTool-devel: Update 13.49 => 13.50
Version 13.50 is production release.

Changelog:
https://exiftool.org/history.html#v13.50

While here merge INSTALL_DATA and COPYTREE_SHARE in post-install-DOCS-on.

PR:	293051

--- a/graphics/p5-Image-ExifTool-devel/Makefile
+++ b/graphics/p5-Image-ExifTool-devel/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	Image-ExifTool
-DISTVERSION=	13.49
+DISTVERSION=	13.50
 CATEGORIES=	graphics perl5
 MASTER_SITES=	https://exiftool.org/ \
 		SF/exiftool
@@ -23,8 +23,6 @@ PORTDOCS=	*
 OPTIONS_DEFINE=	DOCS
 
 post-install-DOCS-on:
-	@${MKDIR} ${STAGEDIR}${DOCSDIR}
-	${INSTALL_DATA} ${WRKSRC}/Changes ${WRKSRC}/README ${STAGEDIR}${DOCSDIR}
-	cd ${WRKSRC} && ${COPYTREE_SHARE} html ${STAGEDIR}${DOCSDIR}
+	cd ${WRKSRC} && ${COPYTREE_SHARE} "Changes README html" ${STAGEDIR}${DOCSDIR}
 
 .include <bsd.port.mk>
