sysutils/try-rs: Add port
This is a cool tool (a reimagining of github.com/tobi/try) that creates,
searches, previews, and recalls all those little "what-if" terminal
experiments. Rather than deleting an experiment when you're done (guilty)
or putting all your experiments into one big directory with
incomprehensible names (guilty), it gives you a TUI to search, clone,
enter, edit, delete, etc. It can clone based on existing experiments, or
clone from git repos.

Perhaps most importantly, it comes with themes.

--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -1443,6 +1443,7 @@
     SUBDIR += treetop
     SUBDIR += triton
     SUBDIR += trueos-libqt5
+    SUBDIR += try-rs
     SUBDIR += ts
     SUBDIR += tty-clock
     SUBDIR += ttyd
