audio/subtui: Add new port
A lightweight Subsonic TUI music player built in Go with scrobbling support.

Reviewed by:		fuz
Differential Revision:	https://reviews.freebsd.org/D55204

--- a/audio/Makefile
+++ b/audio/Makefile
@@ -776,6 +776,7 @@
     SUBDIR += streamtranscoder
     SUBDIR += string-machine-lv2
     SUBDIR += stymulator
+    SUBDIR += subtui
     SUBDIR += suil
     SUBDIR += supercollider
     SUBDIR += surge-synthesizer-lv2
