--- a/devel/py-ty/Makefile.crates
+++ b/devel/py-ty/Makefile.crates
@@ -55,7 +55,7 @@ CARGO_CRATES=	adler2-2.0.1 \
 		clap_complete_nushell-4.5.8 \
 		clap_derive-4.5.49 \
 		clap_lex-0.7.5 \
-		clearscreen-4.0.2 \
+		clearscreen-4.0.3 \
 		codspeed-4.0.4 \
 		codspeed-criterion-compat-4.0.4 \
 		codspeed-criterion-compat-walltime-4.0.4 \
@@ -65,7 +65,7 @@ CARGO_CRATES=	adler2-2.0.1 \
 		collection_literals-1.0.2 \
 		colorchoice-1.0.4 \
 		colored-2.2.0 \
-		colored-3.0.0 \
+		colored-3.1.1 \
 		compact_str-0.9.0 \
 		condtype-1.3.0 \
 		console-0.15.11 \
@@ -119,7 +119,7 @@ CARGO_CRATES=	adler2-2.0.1 \
 		fancy-regex-0.14.0 \
 		fastrand-2.3.0 \
 		fern-0.7.1 \
-		filetime-0.2.26 \
+		filetime-0.2.27 \
 		find-msvc-tools-0.1.2 \
 		flate2-1.1.2 \
 		fnv-1.0.7 \
@@ -129,8 +129,8 @@ CARGO_CRATES=	adler2-2.0.1 \
 		fsevent-sys-4.1.0 \
 		funty-2.0.0 \
 		generic-array-0.14.7 \
-		get-size-derive2-0.7.3 \
-		get-size2-0.7.3 \
+		get-size-derive2-0.7.4 \
+		get-size2-0.7.4 \
 		getopts-0.2.24 \
 		getrandom-0.2.16 \
 		getrandom-0.3.4 \
@@ -165,7 +165,7 @@ CARGO_CRATES=	adler2-2.0.1 \
 		indoc-2.0.7 \
 		inotify-0.11.0 \
 		inotify-sys-0.1.5 \
-		insta-1.46.0 \
+		insta-1.46.1 \
 		insta-cmd-0.6.0 \
 		interpolator-0.5.0 \
 		intrusive-collections-0.9.7 \
@@ -217,7 +217,6 @@ CARGO_CRATES=	adler2-2.0.1 \
 		mio-1.0.4 \
 		natord-1.0.9 \
 		newtype-uuid-1.2.4 \
-		nix-0.29.0 \
 		nix-0.30.1 \
 		nom-7.1.3 \
 		normalize-line-endings-0.3.0 \
@@ -272,13 +271,13 @@ CARGO_CRATES=	adler2-2.0.1 \
 		prettyplease-0.2.37 \
 		proc-macro-crate-3.4.0 \
 		proc-macro-utils-0.10.0 \
-		proc-macro2-1.0.105 \
+		proc-macro2-1.0.106 \
 		pyproject-toml-0.13.7 \
 		quick-junit-0.5.2 \
 		quick-xml-0.38.4 \
 		quickcheck-1.0.3 \
 		quickcheck_macros-1.1.0 \
-		quote-1.0.43 \
+		quote-1.0.44 \
 		quote-use-0.8.4 \
 		quote-use-macros-0.8.4 \
 		r-efi-5.3.0 \
@@ -352,9 +351,9 @@ CARGO_CRATES=	adler2-2.0.1 \
 		test-case-macros-3.3.1 \
 		thin-vec-0.2.14 \
 		thiserror-1.0.69 \
-		thiserror-2.0.17 \
+		thiserror-2.0.18 \
 		thiserror-impl-1.0.69 \
-		thiserror-impl-2.0.17 \
+		thiserror-impl-2.0.18 \
 		thread_local-1.1.9 \
 		threadpool-1.8.1 \
 		tikv-jemalloc-sys-0.6.1+5.3.0-1-ge13ca993e8ccb9ba9847cc330696e02839f328f7 \
@@ -399,8 +398,7 @@ CARGO_CRATES=	adler2-2.0.1 \
 		utf8-width-0.1.7 \
 		utf8_iter-1.0.4 \
 		utf8parse-0.2.2 \
-		uuid-1.19.0 \
-		uuid-macro-internal-1.19.0 \
+		uuid-1.20.0 \
 		valuable-0.1.1 \
 		version-ranges-0.1.1 \
 		version_check-0.9.5 \
@@ -476,5 +474,5 @@ CARGO_CRATES=	adler2-2.0.1 \
 		zstd-0.11.2+zstd.1.5.2 \
 		zstd-safe-5.0.2+zstd.1.5.2 \
 		zstd-sys-2.0.16+zstd.1.5.7 \
-		salsa,salsa-macro-rules,salsa-macros@git+https://github.com/salsa-rs/salsa.git?rev=0946cbd6478cf2bddfc9ac65b3c254c1f1b1bf95\#0946cbd6478cf2bddfc9ac65b3c254c1f1b1bf95 \
-		lsp-types@git+https://github.com/astral-sh/lsp-types.git?rev=3512a9f\#3512a9f33eadc5402cfab1b8f7340824c8ca1439
+		lsp-types@git+https://github.com/astral-sh/lsp-types.git?rev=3512a9f\#3512a9f33eadc5402cfab1b8f7340824c8ca1439 \
+		salsa,salsa-macro-rules,salsa-macros@git+https://github.com/salsa-rs/salsa.git?rev=e9b9ddd4bec50ac777e9353bbb8f1180e5669d89\#e9b9ddd4bec50ac777e9353bbb8f1180e5669d89
