net/fb303: update 2026.02.02.00 → 2026.02.09.00

--- a/net/fb303/Makefile
+++ b/net/fb303/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	fb303
 DISTVERSIONPREFIX=	v
-DISTVERSION=	2026.02.02.00
+DISTVERSION=	2026.02.09.00
 CATEGORIES=	net
 
 MAINTAINER=	yuri@FreeBSD.org
@@ -21,7 +21,7 @@ LIB_DEPENDS=	libboost_regex.so:devel/boost-libs \
 		libglog.so:devel/glog \
 		libicuuc.so:devel/icu \
 		liblz4.so:archivers/liblz4 \
-		libmvfst_server.so:net/mvfst \
+		libmvfst.so:net/mvfst \
 		libsnappy.so:archivers/snappy \
 		libsodium.so:security/libsodium \
 		libthriftcpp2.so:devel/fbthrift \
