devel/tijmp: fix typo
Forgot a line continuation character ('\').

This resulted in:
===>  Patching for tijmp-0.8
sed: -I or -i may not be used with stdin
*** Error code 1

PR:	272855
Fixes:	7a8f1bb9a37e54e870f83802f381d67e9c485de1 "allow compiling with any jdk"

--- a/devel/tijmp/Makefile
+++ b/devel/tijmp/Makefile
@@ -30,7 +30,7 @@ OPTIONS_DEFINE=	DOCS OPTIMIZED_CFLAGS
 OPTIMIZED_CFLAGS_CFLAGS=	-O3
 
 post-patch:
-	@${REINPLACE_CMD}
+	@${REINPLACE_CMD} \
 		-e '/^jardir =/s|=.*|= ${JAVAJARDIR}|' \
 		-e 's| -source 1.6 | |' \
 		${WRKSRC}/Makefile.in
