misc/py-natten: Move to py-NATTEN; Update 0.21.0 → 0.21.5

--- a/misc/Makefile
+++ b/misc/Makefile
@@ -421,6 +421,7 @@
     SUBDIR += pspresent
     SUBDIR += ptsort
     SUBDIR += pubs
+    SUBDIR += py-NATTEN
     SUBDIR += py-PyUserInput
     SUBDIR += py-PyWavefront
     SUBDIR += py-QSpectrumAnalyzer
@@ -516,7 +517,6 @@
     SUBDIR += py-molequeue
     SUBDIR += py-napari
     SUBDIR += py-napari-svg
-    SUBDIR += py-natten
     SUBDIR += py-npTDMS
     SUBDIR += py-npe2
     SUBDIR += py-numcodecs
