--- a/www/opengist/files/opengist.in
+++ b/www/opengist/files/opengist.in
@@ -12,6 +12,8 @@
 #						Default is "%%WWWDIR%%".
 # opengist_user (str):				Set the user for running opengist server.
 #						Default is "opengist".
+# opengist_group (str):				Set the group for running opengist server.
+#						Default is "opengist".
 # opengist_config_file (str):			Set config file location for opengist server.
 #						Default is "%%PREFIX%%/etc/${name}/config.yml".
 # opengist_syslog_output_enable (bool):		Set it to "YES" for enabling output to syslogd(8)
@@ -30,6 +32,7 @@ load_rc_config ${name}
 
 : ${opengist_enable:="NO"}
 : ${opengist_user:="opengist"}
+: ${opengist_group:="opengist"}
 : ${opengist_files:="/var/db/opengist/"}
 : ${opengist_home:="%%WWWDIR%%"}
 : ${opengist_config_file:="%%PREFIX%%/etc/${name}/config.yml"}
