--- a/x11/hyprpaper/Makefile
+++ b/x11/hyprpaper/Makefile
@@ -1,6 +1,7 @@
 PORTNAME=	hyprpaper
 DISTVERSIONPREFIX=	v
 DISTVERSION=	0.8.3
+PORTREVISION=	1
 CATEGORIES=	x11 wayland
 
 MAINTAINER=	tagattie@FreeBSD.org
