textproc/comparator: Find common sections in source trees
comparator is a program for rapidly finding common segments in large
source-code trees. See the manual page for instructions. It comes with
a filtering postprecessor, filterator.

--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -110,6 +110,7 @@
     SUBDIR += codesearch
     SUBDIR += codespell
     SUBDIR += colordiff
+    SUBDIR += comparator
     SUBDIR += comrak
     SUBDIR += confget
     SUBDIR += consul-template
