graphics/skia: update to 144, fix include path and pkgconf file
Approved by:		lwhsu (mentor, implicitly)
Sponsored by:		The FreeBSD Foundation
Differential Revision:	https://reviews.freebsd.org/D55234

--- a/graphics/skia/Makefile
+++ b/graphics/skia/Makefile
@@ -1,7 +1,6 @@
 PORTNAME=	skia
 DISTVERSIONPREFIX=	chrome/m
-DISTVERSION=	140
-PORTREVISION=	2
+DISTVERSION=	144
 CATEGORIES=	graphics
 
 MAINTAINER=	siva@FreeBSD.org
@@ -61,8 +60,8 @@ do-install:
 		ls -1 *.so | xargs -I% ${RLN} ${STAGEDIR}${PREFIX}/lib/%.${DISTVERSION} ${STAGEDIR}${PREFIX}/lib/%)
 	${INSTALL_DATA} ${BUILD_WRKSRC}/*.a ${STAGEDIR}${PREFIX}/lib
 	${INSTALL_DATA} ${WRKDIR}/skia.pc ${STAGEDIR}${PREFIX}/libdata/pkgconfig/
-	${MKDIR} ${STAGEDIR}${PREFIX}/include/skia/modules
-	(cd ${WRKSRC}/include && ${COPYTREE_SHARE} . ${STAGEDIR}${PREFIX}/include/skia '-name *.h')
+	${MKDIR} ${STAGEDIR}${PREFIX}/include/skia/include ${STAGEDIR}${PREFIX}/include/skia/modules
+	(cd ${WRKSRC}/include && ${COPYTREE_SHARE} . ${STAGEDIR}${PREFIX}/include/skia/include '-name *.h')
 	(cd ${WRKSRC}/modules && ${COPYTREE_SHARE} . ${STAGEDIR}${PREFIX}/include/skia/modules '-name *.h')
 
 .include <bsd.port.mk>
