devel/py-dulwich: Add AIOHTTP option

--- a/devel/py-dulwich/Makefile
+++ b/devel/py-dulwich/Makefile
@@ -33,10 +33,12 @@ CPE_VENDOR=	dulwich_project
 
 SHEBANG_FILES=	examples/*.py
 
-OPTIONS_DEFINE=	DOCS EXAMPLES FASTIMPORT PARAMIKO
+OPTIONS_DEFINE=	AIOHTTP DOCS EXAMPLES FASTIMPORT PARAMIKO
+AIOHTTP_DESC=	Asynchronous HTTP client/server support
 FASTIMPORT_DESC=Git fastimport support
 PARAMIKO_DESC=	SSH2 support
 
+AIOHTTP_RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}aiohttp>=0:www/py-aiohttp@${PY_FLAVOR}
 FASTIMPORT_RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}fastimport>=0:devel/py-fastimport@${PY_FLAVOR}
 PARAMIKO_RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}paramiko>=0:security/py-paramiko@${PY_FLAVOR}
 
