--- a/devel/py-python-semantic-release/files/patch-pyproject.toml
+++ b/devel/py-python-semantic-release/files/patch-pyproject.toml
@@ -9,12 +9,14 @@
  build-backend = "setuptools.build_meta"
  
  [project]
-@@ -32,7 +32,7 @@ dependencies = [
+@@ -32,8 +32,8 @@ dependencies = [
    "gitpython ~= 3.0",
    "requests ~= 2.25",
    "jinja2 ~= 3.1",
 -  "python-gitlab >= 4.0.0, < 7.0.0",
+-  "tomlkit ~= 0.13.0",
 +  "python-gitlab >= 4.0.0, < 8.0.0",
-   "tomlkit ~= 0.13.0",
++  "tomlkit >= 0.13.0, < 0.15",
    "dotty-dict ~= 1.3",
    "importlib-resources ~= 6.0",
+   "pydantic ~= 2.0",
