japanese/migemo: Mark BROKEN with ruby34
PR:		292489
Reference:	https://pkg-status.freebsd.org/gohan06/data/143amd64-default-foo/2026-01-25_06h10m42s/logs/errors/ja-migemo-0.40_9,1.log

--- a/japanese/migemo/Makefile
+++ b/japanese/migemo/Makefile
@@ -16,6 +16,8 @@ WWW=		http://0xcc.net/migemo/
 LICENSE=	GPLv2
 LICENSE_FILE=	${WRKSRC}/COPYING
 
+BROKEN_RUBY34=	yes
+
 BUILD_DEPENDS=	${RUBY_SITELIBDIR}/romkan.rb:japanese/ruby-romkan \
 		${RUBY_SITELIBDIR}/bsearch.rb:devel/ruby-bsearch
 RUN_DEPENDS=	${RUBY_SITELIBDIR}/romkan.rb:japanese/ruby-romkan \
