java/openjfx14: Fix 066663be20a8d55bde6ec67c54dbdaeafcf04fea
rubygem-getoptlong is a conditional dependency.

PR:		292489

--- a/java/openjfx14/Makefile
+++ b/java/openjfx14/Makefile
@@ -28,8 +28,7 @@ ONLY_FOR_ARCHS=	aarch64 amd64 i386 powerpc64 powerpc64le
 BUILD_DEPENDS=	zip:archivers/zip \
 		apache-ant>0:devel/apache-ant \
 		gradle62>=6.2:devel/gradle62 \
-		${JAVALIBDIR}/junit.jar:java/junit \
-		rubygem-getoptlong>0:devel/rubygem-getoptlong
+		${JAVALIBDIR}/junit.jar:java/junit
 LIB_DEPENDS=	libasound.so:audio/alsa-lib \
 		libfontconfig.so:x11-fonts/fontconfig \
 		libfreetype.so:print/freetype2
@@ -96,6 +95,12 @@ CFLAGS+=	-Wno-error=incompatible-function-pointer-types
 
 # Suppress errors with lld >= 17 due to undefined symbols.
 LDFLAGS+=	-Wl,--undefined-version
+
+.include <bsd.port.pre.mk>
+
+.if ${RUBY_VER} >= 3.4
+BUILD_DEPENDS+=	rubygem-getoptlong>=0:devel/rubygem-getoptlong
+.endif
 
 post-extract:
 	${MKDIR} ${WRKDIR}/jars
@@ -173,4 +178,4 @@ do-install:
 do-test-TEST-on:
 	@cd ${WRKSRC} && ${_GRADLE_RUN} check test
 
-.include <bsd.port.mk>
+.include <bsd.port.post.mk>
