devel/prjpeppercorn111: Add new port
This port is used by devel/nextpnr* to produce configuration bitstreams for CologneChip GateMate FPGAs.

Notes:
  - This port is versioned because of version compatibility requirements with devel/nextpnr*
  - The timings tarball is mirrored because upstream currently does not provide a versioned archive/URL

Reviewed by:		diizzy
Differential Revision:	https://reviews.freebsd.org/D55235

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -4331,6 +4331,7 @@
     SUBDIR += premake4
     SUBDIR += premake5
     SUBDIR += priv_wrapper
+    SUBDIR += prjpeppercorn111
     SUBDIR += projectcenter
     SUBDIR += prometheus-cpp
     SUBDIR += protobuf
