--- a/devel/nextpnr-devel/Makefile
+++ b/devel/nextpnr-devel/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	nextpnr
-PORTVERSION=	g20250208
+PORTVERSION=	g20250210
 CATEGORIES=	devel
 PKGNAMESUFFIX=	-devel
 
@@ -14,7 +14,8 @@ NOT_FOR_ARCHS=		i386
 NOT_FOR_ARCHS_REASON=	clang segfault
 
 BUILD_DEPENDS=	${LOCALBASE}/share/trellis/database:devel/trellis \
-		${LOCALBASE}/share/icebox:devel/icestorm
+		${LOCALBASE}/share/icebox:devel/icestorm \
+		${LOCALBASE}/share/prjpeppercorn:devel/prjpeppercorn111
 LIB_DEPENDS=	libboost_thread.so:devel/boost-libs \
 		libboost_program_options.so:devel/boost-libs
 
@@ -23,18 +24,19 @@ USE_QT=		base
 USE_GITHUB=	yes
 GH_ACCOUNT=	YosysHQ
 GH_TUPLE=	YosysHQ:nextpnr-tests:ce15412:tests/tests
-GH_TAGNAME=	35f14336c042a9aa86cc66221434262fbb02034e
+GH_TAGNAME=	2a8bab976d04745355800e9f23db6a7d208ce81c
 
 CONFLICTS_INSTALL=	nextpnr
 
+PORTSCOUT=	ignore:1
+
 BINARY_ALIAS=	python3=${PYTHON_CMD}
 
-CMAKE_ARGS=	-DARCH="ice40;ecp5" \
+CMAKE_ARGS=	-DARCH="ice40;ecp5;himbaechel" \
+		-DHIMBAECHEL_UARCH="gatemate" \
+		-DHIMBAECHEL_PEPPERCORN_PATH=${LOCALBASE}/share/prjpeppercorn \
 		-DTRELLIS_ROOT=${LOCALBASE}/share/trellis/
-CMAKE_OFF=	BUILD_GUI
-
-PLIST_FILES=	bin/nextpnr-ecp5 \
-		bin/nextpnr-ice40
+CMAKE_ON=	BUILD_GUI
 
 # Don't create __pycache__ directory when executing blueprint-compiler
 # This is a workaround to avoid filesystem violations during poudriere build
