textproc/bookokrat: Update to 0.3.3
- Update COMMENT line and pkg-descr with the new feature of the program
  (PDF support)
- Update LICENSE (bookokrat is now licensed under AGPL-3.0)
- Mark BROKEN on aarch64 (rust error E0609) [1]
- Update list of lib/build dependencies
- Fix shebang of Python interpreter
- Add some patches to fix build that otherwise fails with the following
  errors:

  1. (fixed with files/patch-cargo-crates_mupdf-sys-0.6.0_build.rs)

error[E0425]: cannot find type `___wchar_t` in this scope
   --> /usr/local/poudriere/ports/default/textproc/bookokrat/work/target/release/build/mupdf-sys-286fe68620daf035/out/bindings.rs:488:20
    |
488 | pub type wchar_t = ___wchar_t;
    |                    ^^^^^^^^^^ not found in this scope

  2. (fixed with files/patch-cargo-crates_libc-0.2.175_src_unix_bsd_freebsdlike_mod.rs)

error[E0308]: mismatched types
    --> src/pdf/kittyv2/kgfx/pool.rs:46:17
     |
  43 |             libc::shm_open(
     |             -------------- arguments to this function are incorrect
...
  46 |                 (libc::S_IRUSR | libc::S_IWUSR) as libc::c_uint,
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `u16`, found `u32`
     |

  3. (fixed with files/patch-cargo-crates_mupdf-sys-0.6.0_mupdf_Makefile)

  ar: warning: can't open file: @/wrkdirs/usr/ports/textproc/bookokrat/work/target/release/build/mupdf-sys-286fe68620daf035/out/build/libmupdf.a.in: No such file or directory
  gmake: *** [Makefile:106: /wrkdirs/usr/ports/textproc/bookokrat/work/target/release/build/mupdf-sys-286fe68620daf035/out/build/libmupdf.a] Error 1
  gmake: *** Waiting for unfinished jobs....

  gmake invocation failed with status 2

ChangeLog:

  - https://github.com/bugzmanov/bookokrat/releases/tag/v0.3.0
  - https://github.com/bugzmanov/bookokrat/releases/tag/v0.3.1
  - https://github.com/bugzmanov/bookokrat/releases/tag/v0.3.2
  - https://github.com/bugzmanov/bookokrat/releases/tag/v0.3.3

Reported by:  pkg-fallout [

--- a/textproc/bookokrat/Makefile
+++ b/textproc/bookokrat/Makefile
@@ -1,22 +1,25 @@
 PORTNAME=	bookokrat
 DISTVERSIONPREFIX=	v
-DISTVERSION=	0.2.4
-PORTREVISION=	1
+DISTVERSION=	0.3.3
+PORTREVISION=	0
 CATEGORIES=	textproc
 
 MAINTAINER=	nivit@FreeBSD.org
-COMMENT=	Terminal EPUB book reader
+COMMENT=	Terminal EPUB/PDF book reader
 WWW=		https://bugzmanov.github.io/bookokrat/index.html
 
-LICENSE=	APACHE20 BSD0CLAUSE BSD2CLAUSE BSL CC0-1.0 CDDL ISCL MIT MPL20 \
-		UNLICENSE ZLIB
+LICENSE=	AGPLv3 APACHE20 BSD0CLAUSE BSD2CLAUSE BSL CC0-1.0 CDDL ISCL MIT \
+		MPL20 UNLICENSE ZLIB
 LICENSE_COMB=	multi
 
-LIB_DEPENDS=	libzstd.so:archivers/zstd
+BROKEN_aarch64=	fails to build with error[E0609]: no field mc_gpregs on type ucontext_t
 
-USES=		cargo
+LIB_DEPENDS=	libfontconfig.so:x11-fonts/fontconfig
+
+USES=		cargo gmake llvm pkgconfig python:env shebangfix
 USE_GITHUB=	yes
 GH_ACCOUNT=	bugzmanov
+SHEBANG_GLOB=	*.py
 
 INSTALL_TARGET=	install-strip
 
@@ -24,6 +27,15 @@ PLIST_FILES=	bin/bookokrat
 PORTDOCS=	readme.txt
 
 OPTIONS_DEFINE=	DOCS
+
+# fix Python interpreter path in other files
+post-patch:
+	@(cd ${WRKSRC} && \
+	${REINPLACE_CMD} -E -e 's|(/usr/bin/)?python3|${PYTHON_CMD}|g' \
+		cargo-crates/freetype-sys-0.20.1/freetype2/meson.build \
+		cargo-crates/mupdf-sys-0.6.0/mupdf/Makefile \
+		cargo-crates/mupdf-sys-0.6.0/mupdf/Makethird \
+		cargo-crates/which-4.4.2/src/lib.rs)
 
 post-install:
 	${STRIP_CMD} ${STAGEDIR}${PREFIX}/bin/bookokrat
