--- a/databases/rainfrog/Makefile.crates
+++ b/databases/rainfrog/Makefile.crates
@@ -98,7 +98,7 @@ CARGO_CRATES=	addr2line-0.24.2 \
 		darling_macro-0.13.4 \
 		darling_macro-0.20.11 \
 		der-0.7.10 \
-		deranged-0.4.0 \
+		deranged-0.5.5 \
 		derive_arbitrary-1.4.2 \
 		derive_builder-0.20.2 \
 		derive_builder_core-0.20.2 \
@@ -150,7 +150,7 @@ CARGO_CRATES=	addr2line-0.24.2 \
 		getrandom-0.2.16 \
 		getrandom-0.3.3 \
 		gimli-0.31.1 \
-		git2-0.20.2 \
+		git2-0.20.4 \
 		half-2.6.0 \
 		hashbrown-0.12.3 \
 		hashbrown-0.14.5 \
@@ -209,7 +209,7 @@ CARGO_CRATES=	addr2line-0.24.2 \
 		lexical-write-integer-1.0.5 \
 		libc-0.2.175 \
 		libduckdb-sys-1.4.4 \
-		libgit2-sys-0.18.2+1.9.1 \
+		libgit2-sys-0.18.3+1.9.2 \
 		libm-0.2.15 \
 		libredox-0.1.9 \
 		libsqlite3-sys-0.30.1 \
@@ -236,7 +236,7 @@ CARGO_CRATES=	addr2line-0.24.2 \
 		num-bigint-0.4.6 \
 		num-bigint-dig-0.8.6 \
 		num-complex-0.4.6 \
-		num-conv-0.1.0 \
+		num-conv-0.2.0 \
 		num-integer-0.1.46 \
 		num-iter-0.1.45 \
 		num-rational-0.4.2 \
@@ -337,8 +337,9 @@ CARGO_CRATES=	addr2line-0.24.2 \
 		security-framework-3.3.0 \
 		security-framework-sys-2.14.0 \
 		semver-1.0.26 \
-		serde-1.0.219 \
-		serde_derive-1.0.219 \
+		serde-1.0.228 \
+		serde_core-1.0.228 \
+		serde_derive-1.0.228 \
 		serde_json-1.0.143 \
 		serde_spanned-0.6.9 \
 		serde_spanned-1.0.0 \
@@ -391,9 +392,9 @@ CARGO_CRATES=	addr2line-0.24.2 \
 		thiserror-impl-2.0.16 \
 		thread_local-1.1.9 \
 		tiff-0.9.1 \
-		time-0.3.41 \
-		time-core-0.1.4 \
-		time-macros-0.2.22 \
+		time-0.3.47 \
+		time-core-0.1.8 \
+		time-macros-0.2.27 \
 		tiny-keccak-2.0.2 \
 		tinystr-0.8.1 \
 		tinyvec-1.10.0 \
