games/bluemoon: Set NCURSESINC unconditional
PR:		293043
Suggested by:	Benjamin Takacs, mew14930xvi

--- a/games/bluemoon/Makefile
+++ b/games/bluemoon/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	bluemoon
 DISTVERSION=	2.13
-PORTREVISION=	1
+PORTREVISION=	2
 CATEGORIES=	games
 MASTER_SITES=	http://www.catb.org/~esr/bluemoon/
 
@@ -23,7 +23,7 @@ OPTIONS_DEFINE=	DOCS
 
 do-build:
 	cd ${WRKSRC} && \
-		${CC} ${CFLAGS} -DRELEASE=\"${DISTVERSION}\" -I${NCURSESINC} -L${NCURSESLIB} -lncurses -o ${PORTNAME} ${PORTNAME}.c
+		${CC} ${CFLAGS} -DRELEASE=\"${DISTVERSION}\" -I${NCURSESBASE}/include -L${NCURSESLIB} -lncurses -o ${PORTNAME} ${PORTNAME}.c
 
 do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/${PORTNAME} ${STAGEDIR}${PREFIX}/bin/
