java/openjfx14: Fix a67f24e318a6966aa0f191de2c49f1fb687fde6e
Fix build with WEBKIT=off.
RUBY_VER variable is only defined with USES=ruby, which is only the
case if the WEBKIT option is on.

While here move LDFLAGS higher.

PR:	293109
Fixes:	a67f24e318a6 (Fix 066663be20a8d55bde6ec67c54dbdaeafcf04fea)

--- a/java/openjfx14/Makefile
+++ b/java/openjfx14/Makefile
@@ -47,6 +47,8 @@ USE_XORG=	x11 xtst xxf86vm
 
 CFLAGS+=	-Wno-unused-command-line-argument \
 		-Wno-int-conversion
+# Suppress errors with lld >= 17 due to undefined symbols.
+LDFLAGS+=	-Wl,--undefined-version
 
 PLIST_SUB=	INSTALLDIR=${_INSTALLDIR}
 
@@ -87,19 +89,16 @@ _GRADLE_RUN=	${SETENV} ${_GRADLE_ENV} gradle62 --no-daemon
 
 _INSTALLDIR=	${PREFIX}/${PKGBASE}
 
-.include <bsd.port.options.mk>
+.include <bsd.port.pre.mk>
 
 .if ${OPSYS} == FreeBSD
 CFLAGS+=	-Wno-error=incompatible-function-pointer-types
 .endif
 
-# Suppress errors with lld >= 17 due to undefined symbols.
-LDFLAGS+=	-Wl,--undefined-version
-
-.include <bsd.port.pre.mk>
-
-.if ${RUBY_VER} >= 3.4
+.if ${PORT_OPTIONS:MWEBKIT}
+. if ${RUBY_VER} >= 3.4
 BUILD_DEPENDS+=	rubygem-getoptlong>=0:devel/rubygem-getoptlong
+. endif
 .endif
 
 post-extract:
