lang/go124: Deprecate (expiry: one month from today)

--- a/lang/go124/Makefile
+++ b/lang/go124/Makefile
@@ -1,4 +1,7 @@
 DISTVERSION=	1.24.13
 BOOTSTRAP_VER=	1.23.12
 
+DEPRECATED=	End of life--please switch to go125 or go126
+EXPIRATION_DATE=2026-03-11
+
 .include "${.CURDIR}/../go/bsd.go.mk"
