www/remark42: Set Go version to a range
remark42 builds, tests, and (superficially) runs when build with go1.26.
Mark the Go version as a minimum, not a pin.

--- a/www/remark42/Makefile
+++ b/www/remark42/Makefile
@@ -15,7 +15,7 @@ LICENSE_FILE=	${WRKSRC}/LICENSE
 
 BUILD_DEPENDS+=	npm-node22>0:www/npm-node22
 
-USES=		cpe go:1.25,modules tar:xz
+USES=		cpe go:1.25+,modules tar:xz
 
 GO_BUILDFLAGS=	-ldflags "-s -w -X main.revision=${DISTVERSION}"
 GO_TARGET=	app:${PREFIX}/libexec/${PORTNAME}
