audio/noctavox: Add new port
NoctaVox is a lightweight, plug and play, TUI music player for local music.

Features:

  - Gapless playback with queue support
  - Multi-format audio (mp3, m4a, wav, flac, ogg, opus)
  - Live library reloading
  - Custom themeing with hot reload
  - Vim-like keybindings
  - Waveform and oscilloscope visualization
  - Playlist management

https://github.com/Jaxx497/NoctaVox

--- a/audio/Makefile
+++ b/audio/Makefile
@@ -514,6 +514,7 @@
     SUBDIR += ncspot
     SUBDIR += netease-music-tui
     SUBDIR += neuralrack-lv2
+    SUBDIR += noctavox
     SUBDIR += noise-repellent-lv2
     SUBDIR += noise-suppression-for-voice-lv2
     SUBDIR += normalize
