--- a/graphics/mesa-devel/Makefile
+++ b/graphics/mesa-devel/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	mesa
-DISTVERSION=	26.0-branchpoint-736
-DISTVERSIONSUFFIX=	-g124d550a943
+DISTVERSION=	26.0-branchpoint-1031
+DISTVERSIONSUFFIX=	-gb651fd90d2d
 CATEGORIES=	graphics
 PKGNAMESUFFIX=	-devel
 
