net/mosquitto: Update to 2.1.2
Building with the ports version of libwebsockets is no longer broken.

Changes since 2.1.1:

 - Forbid running with `persistence true` and with a persistence
   plugin at the same time.

 - Build fixes for OpenBSD.

 - Fix static/shared linking of libwebsockets under cmake.

--- a/net/mosquitto/Makefile
+++ b/net/mosquitto/Makefile
@@ -1,6 +1,5 @@
 PORTNAME=	mosquitto
-DISTVERSION=	2.1.1
-PORTREVISION=	2
+DISTVERSION=	2.1.2
 CATEGORIES=	net
 MASTER_SITES=	https://mosquitto.org/files/source/
 
@@ -20,7 +19,9 @@ RUN_DEPENDS=	${LOCALBASE}/share/certs/ca-root-nss.crt:security/ca_root_nss
 USES=		cmake cpe ssl
 USE_RC_SUBR=	mosquitto
 USE_LDCONFIG=	yes
-CMAKE_ARGS=	-DCMAKE_LIBDATADIR:PATH="${PREFIX}/libdata" \
+CMAKE_ARGS=	-DCJSON_INCLUDE_DIR:PATH="${PREFIX}/include/json" \
+		-DCJSON_LIBRARY:PATH="${PREFIX}/lib/libcjson.so" \
+		-DCMAKE_LIBDATADIR:PATH="${PREFIX}/libdata" \
 		-DWITH_TESTS:BOOL=OFF
 CPE_VENDOR=	eclipse
 
@@ -34,16 +35,15 @@ OPTIONS_DEFAULT=	CARES WEBSOCKETS WEBSOCKETS_BUILTIN
 CARES_LIB_DEPENDS=	libcares.so:dns/c-ares
 CARES_CMAKE_ON=		-DWITH_SRV:BOOL=ON
 
-WEBSOCKETS_DESC=			$(WEBSOCKET_DESC)
-WEBSOCKETS_CMAKE_OFF=			-DWITH_WEBSOCKETS:BOOL=OFF
-WEBSOCKETS_BUILTIN_CMAKE_OFF=		-DWITH_WEBSOCKETS_BUILTIN:BOOL=OFF
-WEBSOCKETS_BUILTIN_DESC=		Use bundled version of websockets
-WEBSOCKETS_BUILTIN_LIB_DEPENDS_OFF=	libwebsockets.so:net/libwebsockets
+WEBSOCKETS_DESC=		$(WEBSOCKET_DESC)
+WEBSOCKETS_CMAKE_OFF=		-DWITH_WEBSOCKETS:BOOL=OFF
+WEBSOCKETS_BUILTIN_CMAKE_OFF=	-DWITH_WEBSOCKETS_BUILTIN:BOOL=OFF
+WEBSOCKETS_BUILTIN_DESC=	Use bundled version of websockets
 
 .include <bsd.port.options.mk>
 
 .if ${PORT_OPTIONS:MWEBSOCKETS} && !${PORT_OPTIONS:MWEBSOCKETS_BUILTIN}
-BROKEN=		building without WEBSOCKETS_BUILTIN fails
+LIB_DEPENDS+=	libwebsockets.so:net/libwebsockets
 .endif
 
 post-patch:
