x11/py-nwg-displays: Update to 0.3.28
While here, add NO_ARCH=yes. The port does not install any
architecture-specific files.

Changelog: https://github.com/nwg-piotr/nwg-displays/releases/tag/v0.3.28

Reported by:	GitHub (watch releases)

--- a/x11/py-nwg-displays/Makefile
+++ b/x11/py-nwg-displays/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	nwg-displays
 DISTVERSIONPREFIX=	v
-DISTVERSION=	0.3.27
+DISTVERSION=	0.3.28
 CATEGORIES=	x11 wayland python
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
@@ -23,6 +23,8 @@ USE_GNOME=	gtk30 pygobject3
 USE_PYTHON=	autoplist concurrent distutils
 
 SHEBANG_FILES=	nwg_displays/main.py
+
+NO_ARCH=	yes
 
 PLIST_FILES=	share/applications/${PORTNAME}.desktop \
 		share/pixmaps/${PORTNAME}.svg
