devel/py-setuptools-scm8: copy from devel/py-setuptools-scm
PR: 286779

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -6005,6 +6005,7 @@
     SUBDIR += py-setuptools-pkg
     SUBDIR += py-setuptools-rust
     SUBDIR += py-setuptools-scm
+    SUBDIR += py-setuptools-scm8
     SUBDIR += py-setuptools44
     SUBDIR += py-setuptools58
     SUBDIR += py-setuptools_git_ls_files
