sysutils/try-rs: Update to 1.1.1

--- a/sysutils/try-rs/Makefile
+++ b/sysutils/try-rs/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	try-rs
 DISTVERSIONPREFIX=	v
-DISTVERSION=	1.0.0
+DISTVERSION=	1.1.1
 CATEGORIES=	sysutils
 
 MAINTAINER=	adamw@FreeBSD.org
@@ -9,6 +9,8 @@ WWW=		https://try-rs.org
 
 LICENSE=	MIT
 LICENSE_FILE=	${WRKSRC}/LICENSE
+
+TEST_DEPENDS=	git-tiny>=0:devel/git@tiny
 
 USES=		cargo
 USE_GITHUB=	yes
