filesystems/moosefs[2,3]-*: Adjust CONFLICTS in anticipation of moosefs 4.x
PR:		289966
Approved by:	Piotr R. Konopelko (MooseFS) <piotr.konopelko@moosefs.com> (maintainer, implicit)

--- a/filesystems/moosefs2-master/Makefile
+++ b/filesystems/moosefs2-master/Makefile
@@ -33,6 +33,9 @@ CONFIGURE_ARGS+=	--localstatedir=${MFS_WORKDIR} \
 			--with-default-user=${MFS_USER} \
 			--with-default-group=${MFS_GROUP} \
 
+CONFLICTS=		moosefs3-* \
+			moosefs-*
+
 .if ${MFS_COMPONENT} == cgi
 MFS_CGIDIR=		${PREFIX}/share/mfscgi
 USES=			python
